Adjusted Spacing Issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   width: 100vw;
+  overflow: hidden;
 
   &::-webkit-scrollbar {
     width: 12px;
@@ -37,7 +38,10 @@
   background-color: $primary;
   width: 100%;
   height: 100vh;
-  overflow-x: auto;
+  overflow: hidden;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+
 
   @media screen and (max-width:500px) {
     max-width: 100vw;
@@ -50,7 +54,7 @@
   }
 
   &::-webkit-scrollbar-track {
-    background: $primary;
+    background: transparent;
     border-radius: 10px;
   }
 
