--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -19,7 +19,8 @@
     box-sizing: border-box;
 
     @media screen and (max-width:500px) {
-      width: 100%;
+      width: 85%;
+      max-width: 85%;
       padding: 40px 15px;
     }
   }
