--- a/src/Components/Departments/Department.module.scss
+++ b/src/Components/Departments/Department.module.scss
@@ -10,7 +10,7 @@
   @media screen and (max-width:500px) {
     padding: 15px 25px;
     max-width: 100vw;
-    
+
   }
 
   .heading {
@@ -50,7 +50,8 @@
     width: 100%;
 
     @media screen and (max-width:500px) {
-      @include flex(row, flex-start, flex-start);
+      @include flex(column, flex-start, flex-start);
+      margin: 25px 0;
     }
 
     .left,
@@ -66,15 +67,14 @@
       @media screen and (max-width:500px) {
         font-size: 16px;
         line-height: 150%;
+        width: 100%;
       }
 
       ul {
         list-style-type: square;
 
-        li {
-          @media screen and (max-width:500px) {
-            min-height: 100px;
-          }
+        @media screen and (max-width:500px) {
+          margin: 0;
         }
       }
 
