--- a/src/Components/Intro/Intro.module.scss
+++ b/src/Components/Intro/Intro.module.scss
@@ -74,7 +74,7 @@
     padding-left: 15px;
 
     @media screen and (max-width:500px) {
-      max-width: 95%;
+      max-width: 85%;
       flex: unset;
       width: 100%;
       padding: 0;
