--- a/src/Components/Stats/Stats.module.scss
+++ b/src/Components/Stats/Stats.module.scss
@@ -18,6 +18,7 @@
     justify-self: stretch;
 
     @media screen and (max-width:500px) {
+
       flex-direction: column;
       // justify-self: unset;
       // justify-content: flex-start;
@@ -37,10 +38,19 @@
       margin-bottom: 15px;
       padding: 0;
 
+      @media screen and (max-width:500px) {
+        font-size: 32px;
+      }
+
       svg {
         padding-left: 10px;
         max-width: 80px;
         max-height: 80px;
+
+        @media screen and (max-width:500px) {
+          max-width: 48px;
+          max-height: 48px;
+        }
 
         path {
           fill: $alternate;
@@ -62,7 +72,7 @@
 
       @media screen and (max-width:500px) {
         max-width: unset;
-        font-size: 24px;
+        font-size: 18px;
       }
     }
 
@@ -135,7 +145,7 @@
 
       @media screen and (max-width:500px) {
         text-align: left;
-        font-size: 24px;
+        font-size: 18px;
       }
 
       span {
@@ -152,7 +162,7 @@
 
         @media screen and (max-width:500px) {
           text-align: left;
-          font-size: 24px;
+          font-size: 18px;
         }
       }
     }
@@ -171,6 +181,8 @@
 
       @media screen and (max-width:500px) {
         text-align: left;
+        font-size: 64px;
+        margin-bottom: 15px;
       }
     }
   }
