--- a/src/index.scss
+++ b/src/index.scss
@@ -10,26 +10,6 @@ body {
     max-width: 100vw;
     overflow: none;
   }
-
-  &::-webkit-scrollbar {
-    width: 12px;
-    height: calc(100% - 200px);
-    margin: 100px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: $primary;
-    border-radius: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: $secondary;
-    border-radius: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background: #2828ff;
-  }
 }
 
 :root {
